# NewMinecraftClone

./: .gitmodules  CMakeLists.txt  TODO.md
lib/: CMakeLists.txt
lib/GLFW/: CMakeLists.txt
lib/glad/: CMakeLists.txt
shader/chunk/: fragment.glsl  vertex.glsl
shader/player/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Main.cpp
src/client/GameClient/: GameClient.cpp  GameClient.hpp
src/client/GameClient/ChunkManager/: ChunkManager.cpp  ChunkManager.hpp
src/client/GameClient/ChunkManager/AABB/: AABB.cpp  AABB.hpp  AABBOffsets.hpp
src/client/GameClient/ChunkManager/Chunk/: Chunk.cpp  Chunk.hpp
src/client/GameClient/ChunkManager/Chunk/Block/: Block.cpp  Block.hpp
src/client/GameClient/ChunkManager/ChunkRenderInfo/: ChunkRenderInfo.cpp  ChunkRenderInfo.hpp
src/client/GameNetworkClient/: GameNetworkClient.cpp  GameNetworkClient.hpp
src/lib/: CMakeLists.txt
src/lib/Common/: PacketType.hpp  Types.cpp  Types.hpp
src/lib/Common/Logger/: Logger.cpp  Logger.hpp
src/lib/Common/Packets/: PacketType.hpp
src/lib/Common/Packets/ChunkData/: ChunkData.cpp  ChunkData.hpp
src/lib/Common/Packets/ChunkRequest/: ChunkRequest.cpp  ChunkRequest.hpp
src/lib/Common/Packets/ChunkResponse/: ChunkResponse.cpp  ChunkResponse.hpp
src/lib/Common/Packets/ChunkUpdate/: ChunkUpdate.cpp  ChunkUpdate.hpp
src/lib/Common/Packets/PlayerState/: PlayerState.cpp  PlayerState.hpp
src/lib/Common/Packets/UpdatePlayerState/: UpdatePlayerState.cpp  UpdatePlayerState.hpp
src/lib/Common/PlayerState/: PlayerState.cpp  PlayerState.hpp
src/lib/Common/Serialize/: Serializable.hpp  Serializer.hpp
src/lib/Common/UpdatePlayerState/: UpdatePlayerState.cpp  UpdatePlayerState.hpp
src/lib/Common/Utility/: Hash.cpp  Hash.hpp
src/server/: CMakeLists.txt  Main.cpp
src/server/GameServer/: GameServer.cpp  GameServer.hpp
src/server/GameServer/Player/: Player.cpp  Player.hpp
src/server/GameServer/ServerWorld/: ServerWorld.cpp  ServerWorld.hpp
src/server/GameServer/ServerWorld/ServerChunk/: ServerChunk.cpp  ServerChunk.hpp
